--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/jkaur126/Assignment4#readme",
   "dependencies": {
     "express": "^5.1.0",
+    "firebase": "^12.4.0",
     "firebase-admin": "^13.5.0",
     "morgan": "^1.10.1"
   },
